--- a/magic.ipynb
+++ b/magic.ipynb
@@ -34,7 +34,7 @@
    },
    "outputs": [],
    "source": [
-    "# 巫術\n",
+    "# Black magic\n",
     "from IPython.display import Latex, SVG, display\n",
     "from IPython.core.interactiveshell import InteractiveShell\n",
     "def frac_to_latex(self):\n",
@@ -100,7 +100,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
